# rmlib

./: CONTRIBUTING.md  Cargo.toml  TRADEMARK.md
src/: lib.rs
src/core/: mod.rs  test.rs
src/core/config/: get_assets_path.rs  get_libs_path.rs  get_versions_path.rs  init.rs  mod.rs
src/core/run/: mod.rs  run_client.rs
src/core/types/: mod.rs  version.rs
src/core/version/: fetch_list.rs  get_version_json.rs  get_version_json_url.rs  install.rs  mod.rs  sort_by_type.rs  strip_version.rs
src/core/version/install/: download_client_jar.rs  download_libraries.rs  extract_native_libraries.rs  install.rs  mod.rs  prepare_version_files.rs  process_assets.rs  resolve_installation_paths.rs  resolve_version_data.rs
src/extra/: mod.rs
src/extra/ely/: beta_proxy_server.rs  mod.rs
