[package]
name = "rmlib"
version = "0.1.0"
edition = "2024"
authors = ["Mus <cuteemus@gmail.com>"]
description = "Rust Minecraft Launcher library"
license = "LGPL-3.0-only"
repository = "https://gitlab.com/cuteemus/rmlib"
keywords = ["minecraft", "launcher", "game"]
categories = ["game-engines"]
copyright = "Copyright (c) 2026 Mus"

[dependencies]
serde_json = "1.0.150"
serde = { version = "1.0", features = ["derive"] }
musutils = { path = "../musutils" }
clap = { version = "4.5", features = ["derive"] }
zip = "2.1"
sha1 = "0.11.0"
reqwest = { version = "0.13.4", features = ["blocking"] }
